--- a/interviewLearn.ipynb
+++ b/interviewLearn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "208a179f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "24ac4b6e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "43d9a9c5",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "538e2a98",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4  33  58  10    1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8f19a2e6",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "304  83  58  2    2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f6d2e31c",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "4  33  58  10    1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "f1d2df62",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "Index(['30', '64', '1', '1.1'], dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "48d05d36",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "Name: 30, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "4f2df30c",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "d011e83b",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "f5854b32",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "(10,)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "52af3754",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "946e760a",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "ed9b6577",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "c2513231",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "dae6e4a6",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "cad23daf",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "324ec661",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "41e03312",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "f34db36d",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "1afc07dc",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "6acbae13",
    "metadata": {},
    "outputs": [],
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "id": "1ba3087a",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "'sometimes we do not know in advance the no. of arguments that will be passed into a function. Python allows us to handle this kind of situation through dfunciton calls with arbitraty no. of arguments'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "994a4183",
    "metadata": {},
    "outputs": [],
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "3f391655",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "'abcde\\nfghij\\nklmno\\npqrst\\nuvwxy\\nz'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "280001a0",
    "metadata": {},
    "outputs": [],
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "e9674451",
    "metadata": {},
    "outputs": [],
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "1440efb1",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "4ccbd1bb",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "id": "9bd943a1",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "c4a5260b",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "id": "e60e9d8b",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'three', 'five', 'five', 'five']\n"
+      "['one', 'two', 'three', 'five']\n"
      ]
     }
    ],
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "id": "86c4c3ac",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'six', 'six', 'three', 'five', 'five', 'five']\n"
+      "['one', 'two', 'six', 'three', 'five']\n"
      ]
     }
    ],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "id": "79a41e4e",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'six', 'three', 'five', 'five', 'five']\n"
+      "['one', 'two', 'three', 'five']\n"
      ]
     }
    ],
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "e9857491",
    "metadata": {},
    "outputs": [
@@ -848,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'six', 'three', 'five', 'five', 'five', 1, 2, 3]\n"
+      "['one', 'two', 'three', 'five', 1, 2, 3]\n"
      ]
     }
    ],
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
    "id": "4a215d8b",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'six', 'three', 'five', 'five', 'five', 1, 2, 3, [1, 2, 3], [1, 2, 3], [1, 2, 3]]\n"
+      "['one', 'two', 'three', 'five', 1, 2, 3, [1, 2, 3]]\n"
      ]
     }
    ],
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 38,
    "id": "a57d2fdd",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'six', 'three', 'five', 'five', 'five', 1, 2, 3, [1, 2, 3], [1, 2, 3]]\n"
+      "['one', 'two', 'three', 'five', 1, 2, 3]\n"
      ]
     }
    ],
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "id": "28c6844f",
    "metadata": {},
    "outputs": [
@@ -909,8 +909,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['one', 'two', 'six', 'three', 'five', 'five', 'five', 1, 2, 3]\n",
-      "[1, 2, 3]\n"
+      "['one', 'two', 'three', 'five', 1, 2]\n",
+      "3\n"
      ]
     }
    ],
@@ -923,15 +923,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "a9caf4fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#coderbyte\n",
-    "stringtaken = \"nzvf2bo6j7\"\n",
-    "conca = "
+    "#arrays\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "84694a17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#List and Dictionary Comprehension\n",
+    "def list_dictionary_comprehension():\n",
+    "    return \"Python comprehensios are syntactic constructs providing a way to build a list, dictionary or set based on the existing list, dictionary or set whilst altering or filtering elements e.g [i for i in range(10,60) if i %10 == 0], insimple words declaring list in one line\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "721a4eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python comprehensios are syntactic constructs providing a way to build a list, dictionary or set based on the existing list, dictionary or set whilst altering or filtering elements e.g [i for i in range(10,60) if i %10 == 0], insimple words declaring list in one line'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_dictionary_comprehension()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6d11b08b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Generators and Decorators\n",
+    "def generators():\n",
+    "    return \"It is a function returning an iterable or object over which can iterate that is by taking one value at a time\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "960bdc94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decorator():\n",
+    "    return \"A decorator allows us to modify or alter the functions, methods and classes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e1c77cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# difference between 'is' and '=='\n",
+    "def difference_between_is_and_equal():\n",
+    "    return \"\"\" '==' checks for equality b/w the variable and 'is' check for identity of the variables\n",
+    "    \"\"\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2014393d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" '==' checks for equality b/w the variable and 'is' check for identity of the variables\\n    \""
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "difference_between_is_and_equal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "de6e2ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# differenc e between indexing and slicing\n",
+    "def indexing_and_slicing():\n",
+    "    return \"\"\" indexing: extracting or looking one or particular values in a data structure e.g. a = [Python] print(a[2]) = t\n",
+    "    slicing: retreive a sequence of elements e.g. print(a[2:]) = thon\n",
+    "    \n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4e171dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' indexing: extracting or looking one or particular values in a data structure e.g. a = [Python] print(a[2]) = t\\n    slicing: retreive a sequence of elements e.g. print(a[2:]) = thon\\n    \\n    '"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indexing_and_slicing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9e6ed06e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Python():\n",
+    "    return \"python is an object-oriented language, meaning it can encloses the code within objects\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9108151d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PEP8():\n",
+    "    return \"\"\"PEP8 is coding convention, It consists of coding guidelines that are a set of recommendation for python language about making the python more readable\n",
+    "     and usable for another persion\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "49c53ced",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Mutable_and_immutable_objects():\n",
+    "    return \"\"\"mutability: is the ability to change the portion of data structure without having to recreate it.\n",
+    "    e.g. list,sets,values in the dictionary\n",
+    "    immutability: e.g. integers, string, float, bool, tuples, keys \n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ca77ed13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mutability: is the ability to change the portion of data structure without having to recreate it.\\n    e.g. list,sets,values in the dictionary\\n    immutability: e.g. integers, string, float, bool, tuples, keys \\n    '"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Mutable_and_immutable_objects()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "7353d473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compound_data_types():\n",
+    "    return \" the data types that is constructed using simple, primitive and basic data types are compound data types\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "779d17c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_structure():\n",
+    "    return \" DS in python allows us to store multiple observations. these are lists, tuples, sets, and dictionaries\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1641b1f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def difference_between_lists_and_tuplesS():\n",
+    "    return \"\"\"List: lists are enclosed within []\n",
+    "    Lists are mutable\n",
+    "    Lists are slower than tuples\n",
+    "    Tuples: enclosed withing parenthesis()\n",
+    "    tuples are immutables\n",
+    "    tuples are faster than lists\n",
+    "    tuples must be used where order of the element of the sequence matters\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67f09219",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
